@@ -1,3 +1,7 @@
+2005-12-19  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * VOEvent.pm: Fixed casing problem for <WhereWhen type="simple">
+
 2005-12-16  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * VOEvent.pm: Added further parsing support
